--- a/OneDrive/Masaüstü/hw3-crud/package.json
+++ b/OneDrive/Masaüstü/hw3-crud/package.json
@@ -1,46 +1,38 @@
 {
-  "name": "goit-node",
+  "name": "nodejs-hw-mongodb",
   "version": "1.0.0",
-  "description": "goit-node-js",
-  "type": "module",
+  "description": "",
   "main": "index.js",
   "scripts": {
-    "get-all": "node src/scripts/getAllContacts",
-    "generate": "node src/scripts/generateContacts.js",
-    "add-one": "node src/scripts/addOneContact.js",
-    "count": "node src/scripts/countContacts.js",
-    "remove-last": "node src/scripts/removeLastContact.js",
-    "remove-all": "node src/scripts/removeAllContacts.js",
     "start": "node src/index.js",
+    "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "nodemon src/index.js"
-  },
-  "keywords": [],
-  "author": "Utku Sert",
-  "license": "ISC",
-  "devDependencies": {
-    "@eslint/js": "^9.2.0",
-    "eslint": "^9.32.0",
-    "globals": "^15.1.0",
-    "nodemon": "^3.1.10"
   },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/Utkusert98/nodejs-hw-mongodb.git"
   },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "type": "module",
   "bugs": {
     "url": "https://github.com/Utkusert98/nodejs-hw-mongodb/issues"
   },
   "homepage": "https://github.com/Utkusert98/nodejs-hw-mongodb#readme",
+  "devDependencies": {
+    "@eslint/js": "^9.32.0",
+    "eslint": "^9.32.0",
+    "eslint-plugin-react": "^7.37.5",
+    "globals": "^16.3.0",
+    "nodemon": "^3.1.10"
+  },
   "dependencies": {
     "cors": "^2.8.5",
     "dotenv": "^17.2.1",
     "express": "^5.1.0",
     "http-errors": "^2.0.0",
-    "joi": "^18.0.0",
     "mongoose": "^8.17.1",
-    "morgan": "^1.10.1",
-    "pino": "^9.8.0",
-    "pino-http": "^10.5.0",
-    "pino-pretty": "^13.1.1"
+    "pino-http": "^10.5.0"
   }
 }
