--- a/src/.env.example
+++ b/src/.env.example
@@ -1,5 +1,5 @@
-MONGODB_USER=your_mongo_user
-MONGODB_PASSWORD=your_password
-MONGODB_URL=your_cluster_url
-MONGODB_DB=your_database_name
 PORT=3000
+MONGODB_USER=utkusert2_db_user
+MONGODB_PASSWORD=3hOtfv8fsAfgzOoZ
+MONGODB_URL=cluster0.na8zsc2.mongodb.net
+MONGODB_DB=contactsDB
